# merkle-morph

./: .gitignore  .rustfmt.toml  .tarpaulin.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: mutants.toml
.github/: unit.yml
.github/workflows/: cron-weekly-rustfmt.yml  lint.yml  unit.yml
docs/: overpass.md
githooks/: pre-commit
src/: channel.rs  errors.rs  global.rs  lib.rs  types.rs  utils.rs  wallet.rs
src/btx/: commitment.rs  conversion.rs  mod.rs  script.rs  state.rs  timelock.rs  transition.rs
src/channel/: anchor.rs  close_utils.rs  commitment.rs  funding.rs  input.rs  mod.rs  silent_payment.rs  state.rs  test_utils.rs  transition.rs
src/channel/commitment/: mod.rs  script_commitment.rs  state_commitment.rs
src/channel/state/: closed.rs  cooperative_closing.rs  force_closing_pending.rs  mod.rs  open.rs
src/channel/transition/: cooperative_close.rs  force_close.rs  mod.rs  recover.rs  transfer.rs
src/channel/tx/: challenge.rs  cooperative_close.rs  force_close.rs  mod.rs
src/global/: anchor.rs  commitment.rs  mod.rs  smt.rs  state.rs
src/global/commitment/: builder.rs  cache.rs  config.rs  database.rs  hasher.rs  keys.rs  mod.rs  proof.rs  provider.rs  subtree.rs  types.rs  updater.rs
src/wallet/: commitment.rs  input.rs  mod.rs  operation.rs  state.rs  transition.rs
src/zkp/: builder_wrapper.rs  column_slice.rs  mod.rs  poseidon2_common.rs  poseidon2_hash.rs  prover_common.rs  types.rs  verifier_common.rs
src/zkp/channel/: air.rs  mod.rs  poseidon2_air.rs  prover.rs  public_inputs.rs  trace.rs  (+1 more)
tests/: e2e.rs
(+26 files in other folders)
